@@ -1,5 +1,10 @@
 2004-05-04  Benjamin Otte  <otte@gnome.org>
 
+	* testsuite/caps/renegotiate.c: (main):
+	  improve output in error case
+
+2004-05-04  Benjamin Otte  <otte@gnome.org>
+
 	* gst/parse/grammar.y:
 	  fix assert to not trigger when there's no error argument
 	* gst/parse/parse.l:
